Fix index title alignment, hr bug

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -117,6 +117,7 @@ h3 {
 hr {
     border-style: dashed;
     max-width: 100px;
+    width: 33%;
 }
 hr::after, hr::before {
     content: "";
